feat: make API URL and CORS configurable for deployment